force-app/main/default/objects/User_Branch_Mapping__c/User_Branch_Mapping__c.object-meta.xml
<CustomObject>
    <label>User Branch Mapping</label>
    <nameField>
        <displayFormat>UBM-{0000}</displayFormat>
        <label>Master User Branch Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Branch Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>