force-app/main/default/objects/User_Branch_Mapping__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>User Branch Mappings</relationshipLabel>
    <relationshipName>User_Branch_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>