force-app/main/default/objects/User_Branch_Mapping__c/fields/lob__c.field-meta.xml
<CustomField>
    <fullName>lob__c</fullName>
    <label>LOB</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BL</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>