force-app/main/default/objects/User_Branch_Mapping__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Branch_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>